--- a/style.css
+++ b/style.css
@@ -3,44 +3,46 @@
     margin: 0;
 }
 body{
-    background: rgba(187, 190, 184, 0.5);
+    background: rgb(156,254,144);
+    background: linear-gradient(90deg, rgba(156,254,144,1) 0%, rgba(99,190,227,1) 35%, rgba(250,96,239,1) 100%);
 }
+
 #calculator{
     width: 30%;
     height: 70%;
-    margin: auto;
+    margin: 0 auto;
     margin-top: 40px;
     display: block;
     font-size: 2em;
-    color: rgb(63, 63, 63);
     box-shadow: 6px 4px 6px #363636ab;
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
 }
 #output{
     width: 100%;
     height: 25%;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
-    background: rgb(197, 197, 197);
+    background: rgba(145, 145, 145, 0.548);
 }
 #text-output{
     float: left;
-    margin-right: 10px;
-    width: 70%;
+    width: 90%;
     text-align: right;
     line-height: 50px;
     transform: translateY(50%); 
+    color: #ffff;
+    font-size:1.2em;
+    overflow:auto;
 }
 #input{
     width: 100%;
     height: 75%;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
-    background: rgb(155, 155, 155);
+    background: rgba(26, 26, 26, 0.582);
     display: grid;
     grid-gap: 2px;
     grid-template-columns: repeat(4, 1fr);
+    color:#ffff;
 }
 .operator, .number, .symbol{
     width: 100%;
@@ -51,10 +53,12 @@ body{
     cursor: pointer;
 }
 .operator, .symbol{
-    color: rgba(90, 75, 75, 0.918);
-    background-color:  rgb(155, 155, 155);
+    background-color:  rgba(0, 0, 0, 0.486);
+    border-radius: 10px;
 }
 .last{
-    grid-column: 4 / 5;
+    grid-column:  3/5;
+    font-size: 3em;
+
 }
 
